correct some error

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
  <h1> Hi , Wanna talk to khaleesi? welcome to Dothraki translation.</h1>
  <textarea id="txt-input"
- placeholder="put your sentence in English here and we will convert it to banana"></textarea>
+ placeholder="put your sentence in English here and we will convert it to Dothraki"></textarea>
 
  <button id="btn-translate">Translate</button>
 <div style="font-size: larger;">output will come here 👇</div>
